# template-python-library

./: .buildinfo  404.html  CLAUDE.md  LICENSE  Makefile  README.md  genindex.html  getting_started.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  full_test.yml  python-app.yml  python-publish.yml  python_publish_test.yml
_sources/: index.rst.txt
docs/: index.md  reference.md  user-guide.md
getting_started/: index.html
my_library/: __init__.py  simulation.py
reference/: index.html
